--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>florDelCampoProducts</title>
 
     <link rel="stylesheet" href="assets/css/index.css">
@@ -9,7 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body style="font-size:14px">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
@@ -50,7 +53,7 @@
 
       <div class="row">
 
-        <div class="col-sm-6">
+        <div class="col-lg-6">
           <div class="card">
             <div class="card-body">
               <img class="card-img" src="assets/img/earlyStages.jpg" alt="Card image cap">
@@ -61,7 +64,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6">
+        <div class="col-lg-6">
           <div class="card">
             <div class="card-body">
               <img class="card-img" src="assets/img/currentStage.jpg" alt="Card image cap">
