--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 
       <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
-          <div class="col-12 col-md">
+          <div class="col-lg-6">
             <h3>Flor del Campo Products</h3>
           </div>
 
-         <div class="col-6 col-md">
+         <div class="col-lg-6">
            <h5>Address</h5>
 
            <ul class="list-unstyled text-small">
@@ -92,7 +92,7 @@
            </ul>
          </div>
 
-         <div class="col-6 col-md">
+         <div class="col-lg-6">
            <h5>Contact</h5>
            <ul class="list-unstyled text-small">
              <li><a class="text-muted" href="#">(831) 225-4367</a></li>
