--- a/contactUs.html
+++ b/contactUs.html
@@ -14,6 +14,7 @@
   </script>
   </head>
   <body style="font-size:14px">
+    <div id="header"></div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
 
@@ -27,8 +28,8 @@
             <li class="nav-item">
               <a class="nav-link" href="aboutUs.html">About Us</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contactUs.html">Contact Us</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Contact Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="gallery.html">Gallery</a>
@@ -41,40 +42,8 @@
 
     <div id="bodyContainer" class="container">
 
-      <div class="card  text-white">
-        <img class="card-img" src="assets/img/florDelCampoCover.jpg" alt="Card image cap">
-      </div>
-
-      <div class="card text-center border-0">
-        <div class="card-body">
-          <h5 class="card-title">A first generation farmer focusing on growing organic produce.</h5>
-        </div>
-      </div>
-
-      <div class="row">
-
-        <div class="col-lg-6">
-          <div class="card">
-            <div class="card-body">
-              <img class="card-img" src="assets/img/earlyStages.jpg" alt="Card image cap">
-
-              <h5 class="card-title">Early Stages</h5>
-              <p class="card-text">Plantation started around April, 2020. Broccoli plants were transplanted first; followed by Celery and Onions</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-6">
-          <div class="card">
-            <div class="card-body">
-              <img class="card-img" src="assets/img/currentStage.jpg" alt="Card image cap">
-
-              <h5 class="card-title">Current Stage: June 2020</h5>
-              <p class="card-text">Broccoli plant has grown fabulously!</p>
-            </div>
-          </div>
-        </div>
-
+      <div class="jumbotron">
+        <h5>Contact Us</h5>
       </div>
 
       <footer class="pt-4 my-md-5 pt-md-5 border-top">
