Attaced Plan views to index.html

--- a/index.html
+++ b/index.html
@@ -51,30 +51,83 @@
         </div>
       </div>
 
+
+      <div class="card text-center border-0">
+        <div class="card-body">
+          <h5 class="card-title">Our Plan</h5>
+        </div>
+      </div>
+
+
       <div class="row">
-
-        <div class="col-lg-6">
-          <div class="card">
+        <div class="col-12">
+          <div class="card border-0">
             <div class="card-body">
-              <img class="card-img" src="assets/img/earlyStages.jpg" alt="Card image cap">
-
-              <h5 class="card-title">Early Stages</h5>
-              <p class="card-text">Plantation started around April, 2020. Broccoli plants were transplanted first; followed by Celery and Onions</p>
+              <h5 class="card-title">Spring of 2020</h5>
+              <p class="card-text">Kicked off with 1/2 acre of land. Half celery and half broccoli.</p>
             </div>
           </div>
         </div>
 
         <div class="col-lg-6">
-          <div class="card">
-            <div class="card-body">
+          <div class="hovereffect">
+              <img class="card-img" src="assets/img/image4.jpg" alt="Card image cap">
+              <div class="overlay">
+                <h2>Celery</h2>
+                <div class="details">
+                  Our Celery has is fully grown and will be harvested on July 31. No longer Available.
+                </div>
+              </div>
+            </div>
+          </div>
+
+        <div class="col-lg-6">
+          <div class="hovereffect">
               <img class="card-img" src="assets/img/currentStage.jpg" alt="Card image cap">
+              <div class="overlay">
+                <h2>Broccoli</h2>
+                <div class="details">
+                  Our Broccoli has been sold. No longer available.
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
 
-              <h5 class="card-title">Current Stage: June 2020</h5>
-              <p class="card-text">Broccoli plant has grown fabulously!</p>
+
+      <div class="row">
+        <div class="col-12">
+          <div class="card border-0">
+            <div class="card-body">
+              <h5 class="card-title">Fall of 2020</h5>
+              <p class="card-text">Kicked off with 1/2 acre of land. Half celery and half broccoli.</p>
             </div>
           </div>
         </div>
 
+        <div class="col-lg-6">
+          <div class="hovereffect">
+              <img class="card-img" src="assets/img/image4.jpg" alt="Card image cap">
+              <div class="overlay">
+                <h2>Celery</h2>
+                <div class="details">
+                  Our Celery has is fully grown and will be harvested on July 31. No longer Available.
+                </div>
+              </div>
+            </div>
+          </div>
+
+        <div class="col-lg-6">
+          <div class="hovereffect">
+              <img class="card-img" src="assets/img/currentStage.jpg" alt="Card image cap">
+              <div class="overlay">
+                <h2>Broccoli</h2>
+                <div class="details">
+                  Our Broccoli has been sold. No longer available.
+                </div>
+              </div>
+            </div>
+          </div>
       </div>
 
       <footer class="pt-4 my-md-5 pt-md-5 border-top">
