--- a/index.html
+++ b/index.html
@@ -44,91 +44,66 @@
       <div class="card  text-white">
         <img class="card-img" src="assets/img/florDelCampoCover.jpg" alt="Card image cap">
       </div>
+    </div>
 
-      <div class="card text-center border-0">
-        <div class="card-body">
-          <h5 class="card-title">A first generation farmer focusing on growing organic produce.</h5>
-        </div>
+      <div class="separatingBanner text-center border-0">
+          <h3>A first generation farmer focusing on growing organic produce.</h3>
       </div>
 
+      <div class="container">
+        <div class="row">
 
-      <div class="card text-center border-0">
-        <div class="card-body">
-          <h5 class="card-title">Our Plan</h5>
-        </div>
-      </div>
-
-
-      <div class="row">
         <div class="col-12">
-          <div class="card border-0">
-            <div class="card-body">
-              <h5 class="card-title">Spring of 2020</h5>
-              <p class="card-text">Kicked off with 1/2 acre of land. Half celery and half broccoli.</p>
-            </div>
+          <div class="sectionTitle">
+              <h2>What's in Season</h2>
           </div>
         </div>
 
-        <div class="col-lg-6">
-          <div class="hovereffect">
-              <img class="card-img" src="assets/img/image4.jpg" alt="Card image cap">
-              <div class="overlay">
-                <h2>Celery</h2>
-                <div class="details">
-                  Our Celery has is fully grown and will be harvested on July 31. No longer Available.
-                </div>
-              </div>
-            </div>
+
+          <div class="boxLeft col-lg-6">
+            <h4>Summer 2020</h4>
+            <p>We're starting our Summer with planting Chard. Other crops still in discussions involve: Lettuce, Cilantro, and Radish. We will update the website once the decision is made.</p>
+          </div>
+          <div class="col-lg-6">
+            <img class="img-responsive boxImage col-6-lg" src="assets/img/alsegas.jpg" alt="Card image cap">
           </div>
 
-        <div class="col-lg-6">
-          <div class="hovereffect">
-              <img class="card-img" src="assets/img/currentStage.jpg" alt="Card image cap">
-              <div class="overlay">
-                <h2>Broccoli</h2>
-                <div class="details">
-                  Our Broccoli has been sold. No longer available.
-                </div>
-              </div>
-            </div>
+          <hr>
+
+          <div class="boxLeft col-lg-6">
+            <h4>Spring 2020</h4>
+            <p>For Spring we grew Broccoli and Celery. All of Broccoli has been sold and the Celery will be Harvested on July 31.</p>
           </div>
-      </div>
-
-
-      <div class="row">
-        <div class="col-12">
-          <div class="card border-0">
-            <div class="card-body">
-              <h5 class="card-title">Fall of 2020</h5>
-              <p class="card-text">Kicked off with 1/2 acre of land. Half celery and half broccoli.</p>
-            </div>
+          <div class="col-lg-6">
+            <img class="img-responsive boxImage col-6-lg" src="assets/img/currentStage.jpg" alt="Card image cap">
           </div>
         </div>
 
-        <div class="col-lg-6">
-          <div class="hovereffect">
-              <img class="card-img" src="assets/img/image4.jpg" alt="Card image cap">
-              <div class="overlay">
-                <h2>Celery</h2>
-                <div class="details">
-                  Our Celery has is fully grown and will be harvested on July 31. No longer Available.
-                </div>
-              </div>
+        <div class="row d-flex align-items-start justify-content-center">
+          <div class="col-12">
+            <div class="sectionTitle">
+                <h2>About Us</h2>
             </div>
+          </div>
+          <div class="alignTop col-lg-4 col-md-6">
+            <h5>Growing Organic</h5>
+            <p>We believe in growing organic products to contribute to a healthy community around our community.</p>
           </div>
 
-        <div class="col-lg-6">
-          <div class="hovereffect">
-              <img class="card-img" src="assets/img/currentStage.jpg" alt="Card image cap">
-              <div class="overlay">
-                <h2>Broccoli</h2>
-                <div class="details">
-                  Our Broccoli has been sold. No longer available.
-                </div>
-              </div>
-            </div>
+          <div class="alignTop col-lg-4 col-md-6 ">
+            <h5>Our Family</h5>
+            <p>Flor del Campo Products is owned and maintained by our family. Everyone in our family contributes by weeding, watering and helping maintain healthy crops.</p>
           </div>
-      </div>
+
+          <div class="alignTop col-lg-4 col-md-6">
+            <h5>Relations and Business Partners</h5>
+            <p>Flor del Campo Products receives mentorship from ALBA program. Our partners contribute to our growth by helping us edit our seasonal plan.</p>
+          </div>
+        </div>
+
+        </div>
+
+
 
       <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
@@ -136,16 +111,16 @@
             <h3>Flor del Campo Products</h3>
           </div>
 
-         <div class="col-lg-6">
+         <div class="col-lg-6 col-md-6 col-sm-6 col-6">
            <h5>Address</h5>
 
-           <ul class="list-unstyled text-small">
+           <ul class="list-unstyled text-small ">
              <li><a class="text-muted" href="#">1700 Old Stage Rd.</a></li>
              <li><a class="text-muted" href="#">Salinas, CA 93908</a></li>
            </ul>
          </div>
 
-         <div class="col-lg-6">
+         <div class="col-lg-6 col-md-6 col-sm-6 col-6">
            <h5>Contact</h5>
            <ul class="list-unstyled text-small">
              <li><a class="text-muted" href="#">(831) 225-4367</a></li>
@@ -154,7 +129,6 @@
          </div>
        </div>
      </footer>
-    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   </body>
