--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 
     <title>florDelCampoProducts</title>
 
+    <!-- css -->
     <link rel="stylesheet" href="assets/css/index.css">
+
+    <!-- // fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Raleway:wght@300&display=swap" rel="stylesheet">
+
+    <!-- // bootstrap, js, jquery -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
@@ -40,8 +47,7 @@
     </nav>
 
     <div id="bodyContainer" class="container">
-
-      <div class="card  text-white">
+      <div class="card  border-0 text-white">
         <img class="card-img" src="assets/img/florDelCampoCover.jpg" alt="Card image cap">
       </div>
     </div>
@@ -53,25 +59,24 @@
       <div class="container">
         <div class="row">
 
-        <div class="col-12">
-          <div class="sectionTitle">
-              <h2>What's in Season</h2>
+          <div class="col-12 sectionTitle">
+                <h2>What's in Season</h2>
           </div>
-        </div>
-
 
           <div class="boxLeft col-lg-6">
-            <h4>Summer 2020</h4>
+            <h5>Summer 2020</h5>
             <p>We're starting our Summer with planting Chard. Other crops still in discussions involve: Lettuce, Cilantro, and Radish. We will update the website once the decision is made.</p>
           </div>
           <div class="col-lg-6">
             <img class="img-responsive boxImage col-6-lg" src="assets/img/alsegas.jpg" alt="Card image cap">
           </div>
 
-          <hr>
+          <div class="divider col-12">
+
+          </div>
 
           <div class="boxLeft col-lg-6">
-            <h4>Spring 2020</h4>
+            <h5>Spring 2020</h5>
             <p>For Spring we grew Broccoli and Celery. All of Broccoli has been sold and the Celery will be Harvested on July 31.</p>
           </div>
           <div class="col-lg-6">
@@ -101,9 +106,7 @@
           </div>
         </div>
 
-        </div>
-
-
+      </div>
 
       <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
