fixed hidden divider

--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
             <img class="img-responsive boxImage col-6-lg" src="assets/img/alsegas.jpg" alt="Card image cap">
           </div>
 
-          <div class="divider col-12">
-
-          </div>
+          <div class="divider col-12"></div>
 
           <div class="boxLeft col-lg-6">
             <h5>Spring 2020</h5>
